css: footer fix on mobile

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -155,6 +155,10 @@ main {
       text-align: center;
       border-top: 1px solid $grey;
       margin-top: 2rem;
+      font-size: 1.8rem;
+      li {
+        padding: 0 .4rem;
+      }
     }
   }
   h4 {
